# linnix

./: .dockerignore  .env.distilled.example  .gitignore  AWS_DEPLOYMENT_README.md  CONTRIBUTING.md  DOCKER_BUILD_SUCCESS.md  DOCKER_QUICKSTART_SUMMARY.md  DOCKER_TEST_RESULTS.md  Dockerfile  HF_MODEL_CARD.md  LICENSE_FAQ.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  UI_DASHBOARD_PHASE2_COMPLETE.md  demo-rules.yaml  docker-compose-demo.yml  docker-compose.llm.yml  docker-compose.yml  flake.nix  install-ec2.sh  install-llm-native.sh  quickstart.sh  setup-llm.sh  test-k8s-priority.sh  test-ui-dashboard-no-sudo.sh  test-ui-dashboard.sh
benchmark-results/: both_modes_test.json  both_test.json  local_test.json  quick_test.json  raw_results_20251213_162924.jsonl  raw_results_20251213_163428.jsonl
cognitod/: Cargo.toml
cognitod/src/: config.rs  context.rs  enforcement.rs  fake_events.rs  incidents.rs  insights.rs  k8s.rs  lib.rs  main.rs  metrics.rs  types.rs
cognitod/src/api/: mod.rs
cognitod/src/collectors/: psi.rs
cognitod/src/enforcement/: safety.rs
cognitod/src/handler/: mod.rs
cognitod/src/handler/local_ilm/: client.rs  mod.rs
cognitod/src/incidents/: analyzer.rs
cognitod/src/inference/: summarizer.rs
cognitod/src/runtime/: mod.rs  stream_listener.rs
cognitod/src/ui/: dashboard.html  mod.rs
cognitod/src/utils/: psi.rs
configs/: linnix.toml
docker/: README.md
docs/: AWS_EC2_DEPLOYMENT.md  COMPARISON.md  FAQ.md  HOW_IT_WORKS.md  OVERHEAD.md  architecture.md  blog-sequencer.md  onboarding.md  whitepaper.md  whitepaper.tex
(+58 files in other folders)
