[package]
name = "cognitod"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
bindgen = "0.71.1"
reqwest = { version = "0.12.15", features = ["json"] }
# ✅ Axum and dependencies
axum = {version = "0.8.3", features =["macros"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "fs"] }
# async handlers and config
async-trait = "0.1"
toml = "0.8"
clap = { workspace = true, features = ["derive"] }
# aya = { workspace = true }
aya = { git = "https://github.com/aya-rs/aya", rev = "fe8e1c48b0f8e14634d55b6abd2207584110546d" }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "fe8e1c48b0f8e14634d55b6abd2207584110546d" }
btf = "0.5.1"
linnix-ai-ebpf-common = { path = "../linnix-ai-ebpf/linnix-ai-ebpf-common", features = ["user"] }
log = "0.4"
env_logger = "0.11.8"
anyhow = "1.0"
bytes = "1"
hyper = "1.0"
tower = "0.5.2"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
sysinfo = "0.36.1"
once_cell = "1"
dashmap = "5"
flate2 = "1"
rand = { version = "0.8", optional = true }
procfs = "0.16"
caps = "0.5"
serde_yaml = "0.9"
libc = "0.2"
jsonschema = "0.17"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util"] }
tempfile = "3"
reqwest-eventsource = "0.4"

[features]
default = []
fake-events = ["rand"]
ilm-test = []
